--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/node": "^24.3.0",
     "element-plus": "^2.10.7",
     "less": "^4.4.0",
     "vue": "^3.5.18",
